# termlib

./: Makefile  termlib.cabal
Termlib/: ArgumentFiltering.hs  ContextSensitive.hs  FunctionSymbol.hs  Precedence.hs  Problem.hs  Repl.hs  Rewrite.hs  Rule.hs  Signature.hs  Substitution.hs  Term.hs  TermGraph.hs  Trs.hs  Types.hs  Utils.hs  Variable.hs
Termlib/Problem/: ParseErrors.hs  Parser.hs  TpdbParser.hs  XmlParser.hs
Termlib/Signature/: XmlParser.hs
Termlib/Term/: Parser.hs
Termlib/Trs/: PrettyPrint.hs  XmlParser.hs
