name:               Termlib
version:            0.1
synopsis:           Term Rewriting
description:
  A comprehensive Term Rewriting Library
author:             The Authors
maintainer:         nobody@nodomain.at
license:            LGPL
cabal-version:      >= 1.6
build-type:	    Simple

library
 exposed-modules:   Termlib.FunctionSymbol
                    Termlib.Signature
                    Termlib.Variable
                    Termlib.Term
                    Termlib.Rule
                    Termlib.Substitution
                    Termlib.Trs
                    Termlib.TermGraph
                    Termlib.Trs.PrettyPrint
                    Termlib.Utils
                    Termlib.Precedence
                    Termlib.ArgumentFiltering
                    Termlib.Problem
                    Termlib.Problem.ParseErrors
                    Termlib.Problem.XmlParser
                    Termlib.Problem.TpdbParser
                    Termlib.Problem.Parser
                    Termlib.Repl

 ghc-options:       -O2

 build-depends:	    base>=3.0.3.0, containers, mtl, HaXml, filepath, parsec>=3.0.0, pretty, fgl, graphviz
