Name:               termlib
Version:            0.7
Author:             Martin Avanzini, 
                    Georg Moser, 
                    Andreas Schnabl
Category:           Math
Maintainer:         Martin Avanzini <martin.avanzini@uibk.ac.at>
Stability:          Experimental
License:            LGPL
License-file:       COPYING.LESSER
Homepage:           http://cl-informatik.uibk.ac.at/software/tct/
Synopsis:           Term Rewriting Library
Description:
  A comprehensive Term Rewriting Library.
cabal-version:      >= 1.6
build-type:         Simple
library
 exposed-modules:   Termlib.FunctionSymbol
                    Termlib.Signature
                    Termlib.Variable
                    Termlib.Term
                    Termlib.Rule
                    Termlib.Substitution
                    Termlib.Trs
                    Termlib.TermGraph
                    Termlib.Term.Parser
                    Termlib.Trs.PrettyPrint
                    Termlib.Utils
                    Termlib.Precedence
                    Termlib.ArgumentFiltering
                    Termlib.Problem
                    Termlib.Problem.ParseErrors
                    Termlib.Problem.XmlParser
                    Termlib.Problem.TpdbParser
                    Termlib.Problem.Parser
                    Termlib.Repl
                    Termlib.ContextSensitive

 ghc-options:       -O2 -Wall -fno-warn-orphans

 build-depends:	    base>=4.0.0.0, containers, mtl, HaXml, filepath, parsec>=3.0.0, pretty, fgl
